frontend: fix word wrap problems with links

--- a/frontend/src/components/common/UserFancyList/index.css
+++ b/frontend/src/components/common/UserFancyList/index.css
@@ -1,7 +1,7 @@
 .UserFancyList > .DataList--body {
   gap: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
 }
 
 .UserView {
