--- a/frontend/src/components/pages/LevelPage/index.css
+++ b/frontend/src/components/pages/LevelPage/index.css
@@ -35,5 +35,5 @@
 .LevelPage--headerWrapper {
   margin: 0;
   font-size: 2.5rem;
-  line-height: 2.5rem;
+  line-height: 3rem;
 }
